cmake_minimum_required(VERSION 3.10)

project(practica4)


add_executable(practica4 main.cc CuadraticExploration.h DinamicSecuence.h DispersionFunction.h DobleDispersionExploration.h ExplorationFunction.h HashTable.h LinealExploration.h ModuloDispersion.h RandomDispersion.h RedispersionExploration.h Sequence.h StaticSequence.h SumDispersion.h nif.h)
